@@ -1,3 +1,6 @@
+Thu Jun 25 22:47:37 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/ctlib/ct.c: comment style
+
 Thu Jun 25 22:31:53 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/unittests/lang_ct_param.c:
 	- add test for empty not null strings
@@ -1671,4 +1674,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2824 2009-06-25 20:32:01 freddy77 Exp $
+$Id: ChangeLog,v 1.2825 2009-06-25 20:47:48 freddy77 Exp $
